--- a/index.html
+++ b/index.html
@@ -18,9 +18,12 @@
       <div id="start-screen" class="start">
         <h1>Coding Quiz Challenge</h1>
         <p>
-          Try to answer the following code-related questions within the time
+          Try to answer the 10 following code-related questions within the time
           limit. Keep in mind that incorrect answers will penalize your
-          score/time by ten seconds!
+          time by ten seconds!
+        </p>
+        <p>
+          Your Final score will be the time you have left, so be quick to get beat the highscores!
         </p>
         <button id="start">Start Quiz</button>
       </div>
