--- a/highscores.html
+++ b/highscores.html
@@ -12,6 +12,7 @@
   <body>
     <div class="wrapper">
       <h1>Highscores</h1>
+      <h2>Here you can find the top 10 scores!</h2>
       <ol id="highscores"></ol>
 
       <a href="index.html"><button>Go Back</button></a>
