--- a/index.html
+++ b/index.html
@@ -45,6 +45,10 @@
       <div id="feedback" class="feedback hide"></div>
     </div>
 
+    <footer class="footer">
+      <h5> &#10024 Built by Alexander Ainslie &#10024</h5>
+    </footer>
+
     <script src="./assets/js/questions.js"></script>
     <script src="./assets/js/logic.js"></script>
   </body>
