--- a/highscores.html
+++ b/highscores.html
@@ -19,6 +19,10 @@
       <button id="clear">Clear Highscores</button>
     </div>
 
+    <footer class="footer">
+      <h5> &#10024 Built by Alexander Ainslie &#10024</h5>
+    </footer>
+
     <script src="./assets/js/scores.js"></script>
   </body>
 </html>
